--- a/index.html
+++ b/index.html
@@ -197,12 +197,9 @@
                 font-size: 16px;
                 margin: 10px 0;
             }
-            .vision p, .mission p {
-                max-width: 90%; 
-                margin-left: auto;
-                margin-right: auto;
-                font-size: 16px;
-                text-align: center;
+
+            .vision h2, .mission h2 {
+            max-width: 100px;
             }
         }
 
@@ -294,6 +291,69 @@
             margin-bottom: 20px;
         }
 
+        .arsip-content h1{
+            text-align: center;
+            font-size: 2.5rem;
+            margin-top: 30px;
+            color: #712535;;
+        }
+
+        .accordion-container {
+            max-width: 600px;
+            margin: 50px auto;
+            padding: 20px;
+            background-color: #fff;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        /* Style for each section */
+        .accordion-section {
+            margin-bottom: 10px;
+        }
+
+        .accordion-header {
+            background-color: #712535;
+            color: white;
+            padding: 15px;
+            cursor: pointer;
+            font-size: 18px;
+            font-weight: bold;
+            border-radius: 5px;
+            text-align: left;
+            transition: background-color 0.3s ease;
+        }
+
+        .accordion-header:hover {
+            background-color: #9b2c4e;
+        }
+
+        .accordion-content {
+            background-color: #f4f4f4;
+            padding: 15px;
+            display: none; /* Hidden by default */
+            border-radius: 5px;
+        }
+
+        .accordion-content h1 {
+            font-size: 20px;
+        }
+
+        .accordion-content h2 {
+            font-size: 18px;
+        }
+
+        .accordion-content h3{
+            font-size: 22px;
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .accordion-content p {
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
     </style>
 </head>
 <body>
@@ -301,6 +361,11 @@
     <header>
         <a href="#sejarah">Sejarah</a>
         <a href="#visi-misi">Visi & Misi</a>
+        <a href="#Stakeholder">Stakeholder</a>
+        <a href="#product-catalog">Catalog</a>
+        <a href="#fasilitas">Fasilitas</a>
+        <a href="#arsip">Arsip</a>
+
     </header>
 
     <section class="image-hero"></section> <!-- Hero image section -->
@@ -437,6 +502,229 @@
             Tjantik Kebaya Collection menyiapkan tim ahli untuk membantu pelanggan dalam memilih desain.
         </p>
     </section>
+
+
+    <section id="arsip" class="arsip-content">
+        <h1>
+            Arsip
+        </h1>
+    <div class="accordion-container">
+        <!-- Accordion Section 1 -->
+        <div class="accordion-section">
+            <div class="accordion-header" onclick="toggleAccordion(this)">
+                PAMERAN DESAIN SENI KEBAYA OLEH TJANTIK KEBAYA COLLECTION
+            </div>
+            <div class="accordion-content">
+                <h1>
+                    PRESS RELEASE
+                </h1>
+                <h2>
+                    PT. Tjantik Kebaya Collection
+                </h2>
+                <h2>
+                    Jl. Gatot Subroto No 56, 50721
+                </h2>
+                <h2>
+                    0812 5603 0103
+                </h2>
+                <h2>
+                    15/10/2024
+                </h2>
+                <h2>
+                    SEGERA
+                </h2>
+                <h3>
+                    PAMERAN DESAIN SENI KEBAYA OLEH TJANTIK KEBAYA COLLECTION
+                </h3>
+                <p> YOGYAKARTA – Jumat, 18 Oktober 2024. Tjantik Kebaya Collection.
+                    Dengan bangga kami umumkan bahwa PT. TJANTIK KEBAYA COLLECTION
+                    akan menyelenggarakan “Pameran Desain Kebaya 2024”, sebuah acara penting dalam
+                    dunia mode tradisional Indonesia. Acara ini bertujuan untuk menampilkan kreativitas
+                    desainer lokal dalam menciptakan kebaya yang elegan dan menawan, sekaligus
+                    meningkatkan kesadaran publik tentang nilai budaya dan sejarah kebaya sebagai
+                    simbol wanita Indonesia. Kegiatan ini dilaksanakan di Royal Ambarrukmo
+                    Yogyakarta, Jl. Laksada Adisucipto No. 81, Ambarukmo, Caturtunggal, Kec. Depok,
+                    Kabupaten Sleman, Daerah Istimewa Yogyakarta 55281.
+                </p>
+                <p>
+                    Pameran Desain Kebaya 2024 oleh Tjantik Kebaya Collection akan
+                    menampilkan koleksi kebaya modern dan tradisional yang dirancang oleh desainer
+                    ternama. Acara ini tidak hanya akan memamerkan keindahan proses pembuatan
+                    kebaya dan filosofi di baliknya. Kegiatan yang dilaksanakan adalah Pameran yang
+                    menampilkan berbagai koleksi kebaya yang dirancang dengan cermat. Kemudian sesi
+                    gratis bagi peserta yang ingin mempelajari teknik desain kebaya. Serta diskusi tentang
+                    nilai-nilai tradisional Indonesia dan peran kebaya dalam budaya nasional. 
+                </p>
+
+                <h2>
+                    Amanda Disya Andini
+                </h2>
+                <h2>
+                    Public Relation Officer
+                </h2>
+                <h2>
+                    PT. Tjantik Kebaya Collection
+                </h2>
+                <h2>
+                    Telp. : 0812 5603 0103
+                </h2>
+                <h2>
+                    Email : Info@Tjantikkebayacollection.com
+                </h2>
+            </div>
+        </div>
+
+    <div class="accordion-container">
+        <!-- Accordion Section 1 -->
+        <div class="accordion-section">
+            <div class="accordion-header" onclick="toggleAccordion(this)">
+                Merayakan Warisan Budaya: Pameran Kebaya Tjantik Kebaya Collection
+            </div>
+            <div class="accordion-content">
+                <h1>
+                    PRESS RELEASE
+                </h1>
+                <h2>
+                    PT. Tjantik Kebaya Collection
+                </h2>
+                <h2>
+                    Jl. Gatot Subroto No 56, 50721
+                </h2>
+                <h2>
+                    0812 5603 0103
+                </h2>
+                <h2>
+                    06/11/2024
+                </h2>
+                <h2>
+                    SEGERA
+                </h2>
+                <h3>
+                    Merayakan Warisan Budaya: Pameran Kebaya Tjantik Kebaya Collection
+                </h3>
+                <p> YOGYAKARTA – Senin, 9 November 2024. Tjantik Kebaya Collection.
+                    Tjantik Kebaya Collection dengan bangga mengumumkan peluncuran koleksi
+                    kebaya terbaru yang terinspirasi oleh warisan budaya Indonesia. Acara peluncuran ini
+                    akan diadakan pada tanggal 9 November 2024, di showroom kami di Yogyakarta, dan
+                    akan menampilkan berbagai model kebaya yang dirancang untuk memadukan tradisi
+                    dengan sentuhan modern. 
+                </p>
+                <p>
+                    Kebaya merupakan pakaian tradisional yang kaya nilai-nilai budaya dan sejarah,
+                    menjadi simbol keanggunan wanita Indonesia. Tjantik Kebaya Collection
+                    berkomitmen untuk melestarikan dan mengembangkan kebaya sebagai dari identitas
+                    budaya kita. Koleksi terbaru ini mencangkup berbagai model, mulai dari kebaya baru
+                    hingga kebaya tulle modern, yang dirancang untuk memenuhi kebutuhan fashion
+                    Wanita masa kini.
+                </p>
+
+                <h2>
+                    Amanda Disya Andini
+                </h2>
+                <h2>
+                    Public Relation Officer
+                </h2>
+                <h2>
+                    PT. Tjantik Kebaya Collection
+                </h2>
+                <h2>
+                    Telp. : 0812 5603 0103
+                </h2>
+                <h2>
+                    Email : Info@Tjantikkebayacollection.com
+                </h2>
+            </div>
+        </div>
+
+            <div class="accordion-container">
+                <!-- Accordion Section 1 -->
+                <div class="accordion-section">
+                    <div class="accordion-header" onclick="toggleAccordion(this)">
+                        TJANTIK KEBAYA COLLECTION
+                    </div>
+                    <div class="accordion-content">
+                        <h3>
+                            TJANTIK KEBAYA COLLECTION
+                        </h3>
+                        <p> Tjantik Kebaya Collection adalah sebuah perusahaan yang fokus pada penyediaan
+                            kebaya, busana tradisional Indonesia yang kaya akan budaya dan seni. Perusahaan ini hadir untuk
+                            melestarikan dan mempopulerkan kebaya sebagai bagian dari identitas budaya Indonesia, dengan
+                            menggabungkan desain modern dan tradisional.
+                        </p>
+                        <h2>
+                            Visi dan Misi :
+                        </h2>
+                        <p>
+                            Visi Tjantik Kebaya Collection adalah menjadi pelopor dalam industri busana tradisional
+                            Indonesia, dengan menyediakan kebaya yang tidak hanya indah tetapi juga nyaman dipakai
+                            oleh berbagai kalangan. Misinya adalah untuk mengangkat dan melestarikan warisan budaya
+                            melalui kreasi busana yang berkualitas, serta mendukung para pengrajin lokal. 
+                        </p>
+                        <h2>
+                            Produk
+                        </h2>
+                        <p>
+                            Tjantik Kebaya Collection menawarkan berbagai variasi kebaya, mulai dari kebaya
+                            klasik hingga kebaya modern yang sesuai dengan tren fashion saat ini. Setiap koleksi
+                            dirancang dengan perhatian terhadap detail, menggunakan bahan berkualitas dan motif yang
+                            menarik. Selain kebaya, perusahaan ini juga menyediakan aksesori pendukung seperti brooch,
+                            selendang, dan perhiasan tradisional. 
+                        </p>
+                        <h2>
+                            Keunggulan
+                        </h2>
+                        <p>
+                            1. Kualitas : Mengutamakan kualitas bahan dan pengerjaan, sehingga produk yang
+                            dihasilkan tahan lama dan nyaman dipakai. 
+                        </p>
+                        <p>    
+                            2. Desain Unik : Menggabungkan elemen tradisional dan modern untuk memberikan pilihan
+                            yang beragam bagi pelanggan. 
+                        </p>
+                        <p>     
+                            3. Dukungan Pengrajin Lokal : Bekerja sama dengan pengrajin lokal untuk mendukung
+                            ekonomi komunitas dan melestarikan keterampilan tradisional. 
+                        </p>
+                        <h2>
+                            Komitmen terhadap Lingkungan
+                        </h2>
+                        <p>
+                            Tjantik Kebaya Collection berkomitmen untuk menggunakan proses produksi yang ramah
+                            lingkungan dan berkelanjutan. Penggunaan bahan-bahan alami dan proses yang minim limbah
+                            menjadi bagian dari tanggung jawab sosial perusahaan. 
+                        </p>
+                        <h2>
+                            Kesimpulan
+                        </h2>
+                        <p>
+                            Sebagai salah satu pelopor dalam industri kebaya, Tjantik Kebaya Collection tidak
+                            hanya menjual busana, tetapi juga mengedukasi masyarakat mengenai nilai dan keindahan
+                            kebaya sebagai bagian dari warisan budaya Indonesia. Dengan desain yang inovatif dan
+                            komitmen terhadap kualitas serta lingkungan, Tjantik Kebaya Collection menjadi pilihan
+                            yang tepat bagi mereka yang ingin tampil anggun dan berkelas dengan busana tradisional. 
+                        </p>
+                        <p>
+                            Informasi lebih lanjut mengenai koleksi terbaru dan cara pemesanan dapat diakses
+                        melalui situs web resmi atau media sosial Tjantik Kebaya Collection. 
+                        </p>
+                    </div>
+                </div>
+
+        <script>
+            function toggleAccordion(element) {
+                // Get the content div associated with the clicked header
+                var content = element.nextElementSibling;
+        
+                // Toggle the display property of the content
+                if (content.style.display === "block") {
+                    content.style.display = "none"; // Hide the content if it's visible
+                } else {
+                    content.style.display = "block"; // Show the content if it's hidden
+                }
+            }
+        </script>
+
+</section>
 
 </body>
 </html>
