--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
             justify-content: center;
         }
 
+        .warning-content h1{
+            text-align: center;
+            background-color: #fff;
+            
+        }
+
         /* Media Query for Mobile */
         @media (max-width: 768px) {
             .image-hero {
@@ -368,7 +374,15 @@
 
     </header>
 
+    <section id="warning" class="warning-content">
+        <h1>
+            Blog ini merupakan tugas perkuliahan pada Mata Kuliah "CYBER PR"
+        </h1>
+    </section>
+
     <section class="image-hero"></section> <!-- Hero image section -->
+
+    
 
     <section id="sejarah" class="sejarah-content">
         <h2>Sejarah Tjantik Kebaya</h2>
