--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
         <!-- Accordion Section 1 -->
         <div class="accordion-section">
             <div class="accordion-header" onclick="toggleAccordion(this)">
-                Merayakan Warisan Budaya: Pameran Kebaya Tjantik Kebaya Collection
+                MERAYAKAN WARISAN BUDAYA: PAMERAN KEBAYA TJANTIK COLLECTION
             </div>
             <div class="accordion-content">
                 <h1>
@@ -654,11 +654,11 @@
                 <!-- Accordion Section 1 -->
                 <div class="accordion-section">
                     <div class="accordion-header" onclick="toggleAccordion(this)">
-                        TJANTIK KEBAYA COLLECTION
+                        Artikel TJANTIK KEBAYA COLLECTION
                     </div>
                     <div class="accordion-content">
                         <h3>
-                            TJANTIK KEBAYA COLLECTION
+                            Dari Tradisi ke Tren: Perjalanan Tjantik Kebaya Collection dalam Memperkenalkan Kebaya kepada Generasi Muda
                         </h3>
                         <p> Tjantik Kebaya Collection adalah sebuah perusahaan yang fokus pada penyediaan
                             kebaya, busana tradisional Indonesia yang kaya akan budaya dan seni. Perusahaan ini hadir untuk
