--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                 <!-- Accordion Section 1 -->
                 <div class="accordion-section">
                     <div class="accordion-header" onclick="toggleAccordion(this)">
-                        Artikel TJANTIK KEBAYA COLLECTION
+                        ARTIKEL TJANTIK KEBAYA COLLECTION
                     </div>
                     <div class="accordion-content">
                         <h3>
